src/components/App/App.scss
$primary_background: #1d1e1e;
$secondary_background: #00b4b1;
$fallback_text_color: #fff;
$link_color: #fff;
$header_font: 'Raleway', sans-serif;
$body_font: 'Merriweather', serif;
$palette: (
    dark: (
        base: #1d1e1e,
        header: #fff,
        text: #fff
    ),
    light: (
        base: #f9f9f9,
        header: #8b8782,
        text: rgb(139, 135, 130)
    ),
    iris: (
        base: #0677a1,
        secondary: #0677a1,
        header: #fff,
        text: #fff
    ),
    blue: (
        base: #2d4159,
        secondary: #2d4159,
        header: #fff,
        text: #fff

    ),
    red: (
        base: #895061,
        secondary: #59253a,
        header: #fff,
        text: #fff
    ),
    footer: (
        text: #fff
    )
);

@mixin small-underline {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0px;
  right: 90%;
  height: 5px;
  display:block;
}

body {
  background-color: $primary_background;
  color: $fallback_text_color;
  font-family: $body_font;
  font-size: calc(0.2vw + 13px);
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
a {
  color: $link_color;
}
p {
  margin-bottom: 1.5em;
}
h1,h2,h3,h4 {
  font-family: $header_font;
  margin: 0.3em 0 0.2em 0;
  position: relative;
  text-transform: uppercase;
}
h1 {
  font-size: 250%;
  padding-bottom: 0.1em;
}
h2 {
  font-size: 200%;
}
h3 {
  font-size: 150%;
}
h4 {
  font-size: 100%;
}
header.top-bar {
  align-items: center;
  display: flex;
  height: 80px;
  justify-content: space-between;
  max-width: 96vw;
  padding: 1vw 2vw;
  position: fixed;
  width: 100%;
  z-index: 2000;
}
span.logo {
  border: 3px solid #fff;
  font-family: $header_font;
  font-size: 160%;
  text-transform: uppercase;
}
span.logo a {
  line-height: 1.4em;
  padding: 0.2em;
  text-decoration: none;
}
span.logo.hide {
  opacity: 0;
  transition: opacity 300ms;
}

footer {
  background-color: map-get(map-get($palette, dark), base);
  color: map-get(map-get($palette, footer), text);
  font-size: calc(0.3vw + 8pt);
  opacity: 0.5;
  padding: calc(0.1vh + 1em) 2vw;
  a {
    color: map-get(map-get($palette, footer), text);
  }
}
form {
  display: flex;
  flex-direction: column;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}
form input,
form textarea {
  border: 0;
  font-size: 90%;
  margin-bottom: 0.5em;
  padding: 0.5em;
}
form label {
  margin-bottom: 0.5em;
  font-family: 'Raleway', sans-serif;
}
form button {
  background-color: transparent;
  border: 0;
  color: #fff;
  font-family: $header_font;
  font-size: 130%;
  font-weight: bold;
  line-height: 1.5em;
  margin-top: 0.5em;
  padding-left: 0;
  text-align: left;
  text-transform: uppercase;
}

.gallery {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  justify-content: flex-start;
}
.gallery > * {
  margin: 0.2em;
  padding: 0.2em;
}
.gallery img {
  object-fit: contain;
}

.app > div {
  align-items: stretch;
  display: flex;
  max-width: 100vw;
  min-height: 90vh;
  width: 100%;
}
.cards {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  list-style: none;
  margin: 0;
  padding: 0;
  margin-bottom: 1.5em;
}
.cards a {
  text-decoration: none;
}
.cards a h4 {
  text-decoration: none;
}
.cards li {
  background: #1F2833;
  margin: 1vw 3% 0 0;
  width: 30%;
}
.cards li p {
  font-size: 90%;
  padding: 10px;
  margin-top: 0;
}
.cards h4 {
  font-size: 105%;
  padding: 10px;
}
.loading i {
  margin-right: 0.5em;
}

/*
* Navigation
*/
nav.main-nav {
  background-color: map-get(map-get($palette, light), base);
  color: map-get(map-get($palette, light), text);
  display: flex;
  flex-direction: column;
  font-size: calc(15px + 1vw);
  height: 100%;
  overflow: hidden;
  position: fixed;
  right: 0;
  top: 0;
  transform: translateX(100%);
  transition: transform 0.3s;
  width: auto;
  white-space: nowrap;
  z-index: 1000;
}
nav.main-nav a {
  color: map-get(map-get($palette, light), text);
  font-family: $header_font;
  text-decoration: none;
  text-transform: uppercase;
}
nav.show {
  padding: 150px 1vw 0 2vw;
  transform: translateX(0);
}
nav.hide > * {
  opacity: 0;
}
button.toggle-menu {
  background-color: rgba(0,0,0,0.2);
  border: 0;
  height: 50px;
  position: relative;
  width: 50px;
}
span.toggle-menu-inner {
  & { top: 45%; left: 10px; }
  &,
  &::before,
  &::after {
    background: rgba(255,255,255,0.9);
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    content: '';
    height: 5px;
    position:absolute;
    transition:0.5s;
    width: 30px;
  }
  &::before {
    left: 0;
    top: -12px;
  }
  &::after {
    left: 0;
    top: 12px;
  }
}
span.toggle-menu-inner.show {
  & {
    background:rgba(0,0,0,0);
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
  }
  &::before {
    top: 0;
    transform:rotate(45deg);
  }
  &::after {
    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
    top: 0;
    transform:rotate(135deg);
  }
} 
a.main-nav-link {
  margin-bottom: 0.5em;
}
a.main-nav-link i {
  margin-right: 0.5em;
}

/*
* Generic Page
*/
article.page {
  display: flex;
  min-height: 100vh;
  padding: 0.5vw;
  width: auto;
}
article.page img {
  max-width: 95%;
  padding: 0.5em;
}
div.content-wrapper {
  padding: calc(5vw + 60px) 1.5vw 0 1.5vw;
  width: 100%;
}
/*
* Fake Terminal Type
*/
.terminal {
  overflow-x: hidden;
  width: 100%;
}
.fakeButtons {
  background-color: #ff3b47;
  border: 1px solid #9d252b;
  border-radius: 50%;
  display: inline-block;
  height: 12px;
  left: 6px;
  position: relative;
  width: 12px;
}
.fakeMinimize {
  background-color: #ffc100;
  border-color: #9d802c;
  left: 11px;
}
.fakeZoom {
  background-color: #00d742;
  border-color: #049931;
  left: 16px;
}
.fakeMenu {
  background-color: #bbb;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  box-sizing: border-box;
  height: auto;
  margin: 0 auto;
  padding-left: 5px;
  padding-top: 2px;
  width: 100%;
}
.fakeScreen {
  background-color: #151515;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  box-sizing: border-box;
  font-family: "Courier";
  font-size: calc(1.2vw + 5px);
  margin: 0 auto;
  padding: 0.2em 1em 1.5em 1em;
  width: 100%;
}
.type-text {
  margin: 6px 10px 0 0;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
  width: 30em;
}
.type-text:nth-child(2){
  animation: type 2s steps(60, end);
}
.type-text:nth-child(3){
  animation: type2 4s steps(60, end);
}
.type-text:nth-child(4){
  animation: type3 9s steps(60, end);
}
.type-text a {
  color: lime;
  text-decoration: none;
}
@keyframes type { 
  from { width: 0; } 
} 
@keyframes type2 {
  0% { width: 0; }
  33% { width: 0; }
  66% { width: 100; }
  100% { width: 100; } 
}
@keyframes type3 {
  0% { width: 0; }
  33% { width: 0; }
  66% { width: 0; }
  100% { width: 100; }
}

/* 
* Buttons
*/
.buttons {
  margin-top: 1em;

  h4 {
    margin-bottom: 0.5em;
  }

  i {
    margin-right: 20px;
  }
}

/*
* Pages
*/
article.home {
  background-color: map-get(map-get($palette, dark), base);
}
article.home h1,
article.home h2,
article.home h3 {
  color: map-get(map-get($palette, dark), header);
}

article.development {
  background-color: map-get(map-get($palette, blue), base);
  background: radial-gradient(circle, map-get(map-get($palette, blue), base) 0%, map-get(map-get($palette, blue), secondary) 100%);
}
article.development h1,
article.development h2,
article.development h3 {
  color: map-get(map-get($palette, blue), header);
}
article.development h1:before {
  @include small-underline;
  background: map-get(map-get($palette, blue), header);
}
article.development img {
  background-color: #fff;
  max-width: 100%;
  width: auto;
}

article.broadcast {
  background-color: map-get(map-get($palette, red), base);
  background: radial-gradient(circle, map-get(map-get($palette, red), base) 0%, map-get(map-get($palette, red), secondary) 100%);
}
article.broadcast h1,
article.broadcast h2,
article.broadcast h3 {
  color: map-get(map-get($palette, red), header);
}
article.broadcast h1:before {
  @include small-underline;
  background: map-get(map-get($palette, red), header);
}

article.contact {
  background-color: map-get(map-get($palette, iris), base);
  background: radial-gradient(circle, map-get(map-get($palette, iris), base) 0%, map-get(map-get($palette, iris), secondary) 100%);
}
article.contact h1,
article.contact h2,
article.contact h3 {
  color: map-get(map-get($palette, iris), header);
}
article.contact h1:before {
  @include small-underline;
  background: map-get(map-get($palette, iris), header);
}

article.contact ul {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0 0 0 0;
}
article.contact li {
  margin-right: 1em;
}

@media only screen and (max-width: 700px) {
  .cards li {
    width: 47%;
  }
}

